added search bar and button

--- a/index.html
+++ b/index.html
@@ -25,12 +25,20 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="#">Explore </a>
+        <a class="nav-link" href="#">Videos</a>
       </div>
     </div>
   </div>
 </nav>
+<form action="#" method="GET">
+    <div class="form-row">
+        <label>
+            <input type="text" name="search-bar" required />
+        </label>
+        <button type="submit">Search</button>
+    </div>
+</form>
 
 <script src="./main.js"></script>
 </body>
