styled images with flex wrap

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Giph Search</a>
+    <a class="navbar-brand" href="#">Giphy Search</a>
     <button class="navbar-toggler" type="button" 
         data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,14 +31,15 @@
     </div>
   </div>
 </nav>
+<h1> Sit back and Laugh </h1>
 <form id="searchBar">
     <div class="search-container">
-        <input type="text" id="searchInput" />  <!--maybe placeholder-->
+        <input type="text" id="searchInput" placeholder="Find GIFs Here"/> 
         <button id="searchButton">Search</button>
     </div>
 </form>
 <div class="results">
-<div id="gifResults"></div>
+  <div id="gifResults"></div>
 </div>
 <script src="./main.js"></script>
 </body>
