--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
     </div>
   </div>
 </nav>
-<h1> Sit back and Laugh </h1>
 <form id="searchBar">
     <div class="search-container">
-        <input type="text" id="searchInput" placeholder="Find GIFs Here"/> 
+        <input type="text" id="searchInput" placeholder="Search GIFs Here"/> 
         <button id="searchButton">Search</button>
     </div>
 </form>
