--- a/index.html
+++ b/index.html
@@ -41,5 +41,9 @@
   <div id="gifResults"></div>
 </div>
 <script src="./main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" 
+  crossorigin="anonymous">
+</script>
 </body>
 </html>
