Fixed font placement and added a title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Giphy Search</a>
@@ -34,6 +33,7 @@
     </div>
   </div>
 </nav>
+<h1> SIT BACK AND LAUGH </h1>
 <form id="searchBar">
     <div class="search-container">
         <input type="text" id="searchInput" placeholder="Search GIFs Here"/> 
