Added title and background image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" id="section0">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Giphy Search</a>
     <button class="navbar-toggler" type="button" 
@@ -26,7 +26,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link " aria-current="page" href="#">Home</a>
         <a class="nav-link" href="#">Explore </a>
         <a class="nav-link" href="#">Videos</a>
       </div>
@@ -43,6 +43,7 @@
 <div class="results">
   <div id="gifResults"></div>
 </div>
+<h2> <a href="#section0">Back to Top</a></h2>
 <script src="./main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" 
